@@ -98,7 +98,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
         _M_construct_aux(_InIterator __beg, _InIterator __end, 
 			 std::__false_type)
 	{
-          typedef typename iterator_traits<_InIterator>::iterator_category _Tag;
+          typedef typename std::iterator_traits<_InIterator>::iterator_category
+	    _Tag;
           _M_construct(__beg, __end, _Tag());
 	}
 
